Fix float theme tags not visible

--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -399,7 +399,7 @@ div.theme-float {
     --tertiary-color: #B80C09;
     --error-color: #B80C09;
     --link-color: #0B4F6C;
-    --tag-color: #FBFBFF;
+    --tag-color: #5ebad3;
     --highlight-color: #57c4a1;
     --journal-entry-background: #d4eef3;
     --approve: #01BAEF;
